@@ -1,3 +1,7 @@
+*idemix-0.4-87d1cd0 (24 May 2012)
+
+Added support for multiple credentials
+
 *idemix-0.3-8997a1f (23 May 2012)
 
 Added support for secure messaging.
